# GlobeFlowAI

./: .gitignore  BLOG.md  Dockerfile  LICENSE  README.md  inference.py  inference_results.json  main.py  openenv.yaml  pyproject.toml  requirements.txt  run_tests.sh  test_eval.py  validation.sh
env/: actions.py  data.py  environment.py  graders.py  models.py  reward.py  rules.py  rules_engine.py  tasks.py  validators.py
fixtures/: country_rules.json  tax_treaties.json  visa_types.json
graders/: __init__.py  grader_easy.py  grader_hard.py  grader_medium.py  graders.py
server/: app.py
tasks/: task_easy.py  task_hard.py  task_medium.py
tests/: test_api.py  test_crisis.py  test_eval.py
