[project]
name = "workforce-mobility-env"
version = "0.1.0"
description = "OpenEnv Workforce Mobility Environment"
requires-python = ">=3.11"

dependencies = [
    "fastapi==0.111.0",
    "uvicorn==0.29.0",
    "pydantic==2.7.0",
    "openai==1.30.0",
    "httpx==0.27.0",
    "pytest==8.2.0"
]

[tool.uv]
# optional but useful
dev-dependencies = []