[project]
name = "workforce-mobility-env"
version = "0.1.0"
description = "OpenEnv Workforce Mobility Environment"
requires-python = ">=3.11"

dependencies = [
    "fastapi==0.111.0",
    "uvicorn==0.29.0",
    "pydantic==2.7.0",
    "openai>=2.7.2",
    "httpx==0.27.0",
    "pytest==8.2.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "main:main"

[dependency-groups]
dev = []

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
