[project]
name = "workforce-mobility-env"
version = "2.0.0"
description = "OpenEnv Workforce Mobility Environment — Team AI Kalesh"
requires-python = ">=3.11"

dependencies = [
    "fastapi==0.111.0",
    "uvicorn==0.29.0",
    "pydantic>=2.7.0",
    "openai>=2.7.2",
    "httpx==0.27.0",
    "pytest==8.2.0",
    "openenv-core>=0.2.3",
]

[project.scripts]
server = "main:main"

[dependency-groups]
dev = []

[tool.setuptools.packages.find]
include = ["env*", "graders*", "server*", "fixtures*", "tasks*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"